entity_macros/tests/ui/derive/ent/missing-last_updated.stderr
error: No last_updated field provided
 --> $DIR/missing-last_updated.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
